@@ -1,3 +1,11 @@
+Thu Jul  7 15:44:42 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (rb_enc_set_index, rb_enc_associate_index): should
+	  check if frozen.
+
+	* parse.y (rb_intern3), ruby.c (process_options, ruby_script):
+	  defer freezing after associating encodings.
+
 Thu Jul  7 15:16:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* numeric.c (rb_num2ull): use own switch sentense.
